syntax = "proto3";

option go_package = "./chat_service";

message Content {
	repeated string content = 1;
}

message ChatMessage {
	int32 target_id = 1;
	bool is_user = 2;
    repeated Content contents = 3;
}
