import * as protobuf from 'protobufjs';

// å®šä¹‰protobufæ¶ˆæ¯ç»“æ„
const protoDefinition = `
syntax = "proto3";

message Content {
  repeated string content = 1;
}

message ChatMessage {
  int32 target_id = 1;
  bool is_user = 2;
  repeated Content contents = 3;
}
`;

let ChatMessage: protobuf.Type | null = null;
let Content: protobuf.Type | null = null;

// åˆå§‹åŒ–protobuf
async function initProtobuf() {
  if (ChatMessage && Content) {
    return;
  }
  
  const root = protobuf.parse(protoDefinition).root;
  Content = root.lookupType('Content');
  ChatMessage = root.lookupType('ChatMessage');
}

export interface ChatMessageData {
  target_id: number;
  is_user: boolean;
  contents: Array<{ content: string[] }>;
}

export class ChatClient {
  private ws: WebSocket | null = null;
  private userId: number = 0;
  private onMessageCallback: ((data: ChatMessageData) => void) | null = null;
  private onStatusChangeCallback: ((connected: boolean) => void) | null = null;

  constructor() {
    initProtobuf();
  }

  async connect(userId: number, wsUrl: string = 'ws://localhost:8081/ws'): Promise<void> {
    if (this.ws && this.ws.readyState === WebSocket.OPEN) {
      throw new Error('å·²ç»è¿æ¥ï¼Œè¯·å…ˆæ–­å¼€');
    }

    await initProtobuf();
    
    if (!ChatMessage || !Content) {
      throw new Error('Protobufåˆå§‹åŒ–å¤±è´¥');
    }

    this.userId = userId;
    const url = `${wsUrl}?user_id=${userId}`;
    
    return new Promise((resolve, reject) => {
      try {
        this.ws = new WebSocket(url);
        
        // è®¾ç½®äºŒè¿›åˆ¶ç±»å‹ä¸ºArrayBufferï¼Œä»¥ä¾¿æ­£ç¡®å¤„ç†protobufæ¶ˆæ¯
        this.ws.binaryType = 'arraybuffer';
        
        this.ws.onopen = () => {
          console.log('WebSocketè¿æ¥æˆåŠŸï¼Œç”¨æˆ·ID:', userId);
          if (this.onStatusChangeCallback) {
            this.onStatusChangeCallback(true);
          }
          resolve();
        };
        
        this.ws.onerror = (error) => {
          console.error('WebSocketè¿æ¥é”™è¯¯:', error);
          if (this.onStatusChangeCallback) {
            this.onStatusChangeCallback(false);
          }
          reject(new Error('WebSocketè¿æ¥å¤±è´¥'));
        };
        
        this.ws.onclose = (event) => {
          console.log('WebSocketè¿æ¥å…³é—­:', event.code, event.reason);
          if (this.onStatusChangeCallback) {
            this.onStatusChangeCallback(false);
          }
        };
        
        this.ws.onmessage = (event) => {
          console.log('\n\n');
          console.log('ğŸ”ŒğŸ”ŒğŸ”Œ ========== WebSocket onmessage äº‹ä»¶è§¦å‘ ==========');
          console.log('ğŸ”ŒğŸ”ŒğŸ”Œ è¿™æ˜¯æœ€åº•å±‚çš„æ¶ˆæ¯æ¥æ”¶ï¼');
          console.log('ğŸ”ŒğŸ”ŒğŸ”Œ æ—¶é—´:', new Date().toLocaleString('zh-CN'));
          console.log('ğŸ”ŒğŸ”ŒğŸ”Œ å½“å‰ç”¨æˆ·ID:', this.userId);
          console.log('\nğŸ”Œ ========== WebSocket åŸå§‹æ¶ˆæ¯æ¥æ”¶ ==========');
          console.log('ğŸ“¦ åŸå§‹äº‹ä»¶æ•°æ®:', {
            type: typeof event.data,
            constructor: event.data?.constructor?.name,
            isArrayBuffer: event.data instanceof ArrayBuffer,
            isBlob: event.data instanceof Blob,
            isString: typeof event.data === 'string',
            size: event.data instanceof ArrayBuffer ? event.data.byteLength : 
                  event.data instanceof Blob ? event.data.size : 
                  typeof event.data === 'string' ? event.data.length : 'unknown',
            å®Œæ•´æ•°æ®: event.data
          });
          
          let buffer: Uint8Array;
          
          // å¤„ç†ä¸åŒç±»å‹çš„æ¶ˆæ¯æ•°æ®
          if (event.data instanceof ArrayBuffer) {
            buffer = new Uint8Array(event.data);
            console.log(`ğŸ“¦ å¤„ç† ArrayBuffer æ¶ˆæ¯ï¼Œå¤§å°: ${buffer.length} å­—èŠ‚`);
            console.log(`ğŸ“¦ ArrayBuffer åŸå§‹å­—èŠ‚ (å‰100å­—èŠ‚):`, Array.from(buffer.slice(0, 100)).map(b => '0x' + b.toString(16).padStart(2, '0')).join(' '));
            console.log(`ğŸ“¦ ArrayBuffer å®Œæ•´å­—èŠ‚:`, Array.from(buffer).map(b => '0x' + b.toString(16).padStart(2, '0')).join(' '));
          } else if (event.data instanceof Blob) {
            // å¦‚æœæ˜¯Blobï¼Œéœ€è¦å…ˆè¯»å–
            console.log(`ğŸ“¦ å¤„ç† Blob æ¶ˆæ¯ï¼Œå¤§å°: ${event.data.size} å­—èŠ‚`);
            event.data.arrayBuffer().then((ab) => {
              buffer = new Uint8Array(ab);
              console.log(`ğŸ“¦ Blob è½¬æ¢ä¸º ArrayBufferï¼Œå¤§å°: ${buffer.length} å­—èŠ‚`);
              console.log(`ğŸ“¦ Blob åŸå§‹å­—èŠ‚ (å‰100å­—èŠ‚):`, Array.from(buffer.slice(0, 100)).map(b => '0x' + b.toString(16).padStart(2, '0')).join(' '));
              this.processMessage(buffer);
            });
            return;
          } else if (typeof event.data === 'string') {
            // å¤„ç†æ–‡æœ¬æ¶ˆæ¯
            console.log('ğŸ“ æ”¶åˆ°æ–‡æœ¬æ¶ˆæ¯:', event.data);
            console.log('ğŸ“ æ–‡æœ¬æ¶ˆæ¯å®Œæ•´å†…å®¹:', JSON.stringify(event.data));
            
            // æ£€æŸ¥æ˜¯å¦æ˜¯é”™è¯¯æ¶ˆæ¯
            if (event.data.includes('Permission Denied') || event.data.includes('User not found')) {
              console.error('âŒ æƒé™é”™è¯¯æˆ–ç”¨æˆ·æœªæ‰¾åˆ°');
              if (this.onStatusChangeCallback) {
                this.onStatusChangeCallback(false);
              }
              return;
            }
            
            // å°è¯•å°†å­—ç¬¦ä¸²è½¬æ¢ä¸ºUint8Arrayï¼ˆå¯èƒ½æ˜¯protobufç¼–ç çš„å­—ç¬¦ä¸²ï¼‰
            console.log('âš ï¸  æ¶ˆæ¯æ˜¯å­—ç¬¦ä¸²æ ¼å¼ï¼Œå°è¯•è½¬æ¢ä¸ºäºŒè¿›åˆ¶å¤„ç†...');
            try {
              const str = event.data;
              
              // æ–¹æ³•1: ä½¿ç”¨TextEncoderå°†UTF-8å­—ç¬¦ä¸²è½¬æ¢ä¸ºUint8Array
              const encoder = new TextEncoder();
              const uint8Array = encoder.encode(str);
              
              console.log('âœ… å­—ç¬¦ä¸²è½¬æ¢ä¸ºUint8ArrayæˆåŠŸï¼Œé•¿åº¦:', uint8Array.length);
              console.log('è½¬æ¢åçš„å­—èŠ‚ (å‰50å­—èŠ‚):', Array.from(uint8Array.slice(0, 50)).map(b => '0x' + b.toString(16).padStart(2, '0')).join(' '));
              console.log('å®Œæ•´å­—èŠ‚:', Array.from(uint8Array).map(b => '0x' + b.toString(16).padStart(2, '0')).join(' '));
              
              this.processMessage(uint8Array);
            } catch (error) {
              console.error('âŒ å­—ç¬¦ä¸²è½¬æ¢å¤±è´¥:', error);
              console.error('é”™è¯¯è¯¦æƒ…:', error);
            }
            return;
          } else {
            // å°è¯•è½¬æ¢ä¸ºUint8Array
            try {
              buffer = new Uint8Array(event.data);
              console.log(`ğŸ“¦ è½¬æ¢åçš„æ¶ˆæ¯ï¼Œå¤§å°: ${buffer.length} å­—èŠ‚`);
              console.log(`ğŸ“¦ è½¬æ¢åçš„å­—èŠ‚ (å‰100å­—èŠ‚):`, Array.from(buffer.slice(0, 100)).map(b => '0x' + b.toString(16).padStart(2, '0')).join(' '));
            } catch (e) {
              console.error('âŒ æ— æ³•å¤„ç†çš„æ¶ˆæ¯ç±»å‹:', typeof event.data, event.data);
              console.error('âŒ é”™è¯¯è¯¦æƒ…:', e);
              return;
            }
          }
          
          console.log('==========================================\n');
          console.log('ğŸ”§ å‡†å¤‡è°ƒç”¨ processMessageï¼Œbufferé•¿åº¦:', buffer.length);
          this.processMessage(buffer);
          console.log('âœ… processMessage è°ƒç”¨å®Œæˆ');
        };
      } catch (error) {
        console.error('åˆ›å»ºWebSocketè¿æ¥æ—¶å‡ºé”™:', error);
        reject(error);
      }
    });
  }

  disconnect(): void {
    if (this.ws) {
      this.ws.close();
      this.ws = null;
    }
    if (this.onStatusChangeCallback) {
      this.onStatusChangeCallback(false);
    }
  }

  private processMessage(buffer: Uint8Array): void {
    console.log('\n\n');
    console.log('ğŸ”ğŸ”ğŸ” ========== processMessage è¢«è°ƒç”¨ ==========');
    console.log('ğŸ”ğŸ”ğŸ” è¿™æ˜¯æ¶ˆæ¯è§£æå‡½æ•°ï¼');
    console.log('ğŸ”ğŸ”ğŸ” æ—¶é—´:', new Date().toLocaleString('zh-CN'));
    console.log('ğŸ”ğŸ”ğŸ” å½“å‰ç”¨æˆ·ID:', this.userId);
    console.log('ğŸ”ğŸ”ğŸ” onMessageCallback æ˜¯å¦è®¾ç½®:', !!this.onMessageCallback);
    
    try {
      console.log('\nğŸ” ========== å¼€å§‹è§£æ Protobuf æ¶ˆæ¯ ==========');
      console.log('ğŸ“¦ åŸå§‹ Buffer æ•°æ®:', {
        é•¿åº¦: buffer.length,
        å‰50å­—èŠ‚: Array.from(buffer.slice(0, 50)).map(b => '0x' + b.toString(16).padStart(2, '0')).join(' '),
        å®Œæ•´Buffer: Array.from(buffer).map(b => b.toString(16).padStart(2, '0')).join(' ')
      });
      
      const message = ChatMessage!.decode(buffer) as any;
      
      console.log('ğŸ“‹ Protobuf è§£ç åçš„åŸå§‹æ¶ˆæ¯å¯¹è±¡:', JSON.stringify(message, null, 2));
      console.log('ğŸ”‘ æ¶ˆæ¯å¯¹è±¡çš„æ‰€æœ‰é”®:', Object.keys(message));
      console.log('ğŸ” æ¶ˆæ¯å¯¹è±¡çš„è¯¦ç»†ä¿¡æ¯:', {
        'message.targetId': message.targetId,
        'message.targetIdç±»å‹': typeof message.targetId,
        'message.target_id': message.target_id,
        'message.target_idç±»å‹': typeof message.target_id,
        'message.isUser': message.isUser,
        'message.isUserç±»å‹': typeof message.isUser,
        'message.is_user': message.is_user,
        'message.is_userç±»å‹': typeof message.is_user,
        'message.contents': message.contents,
        'message.contentsç±»å‹': typeof message.contents,
        'message.contentsé•¿åº¦': message.contents?.length,
        å®Œæ•´æ¶ˆæ¯å¯¹è±¡: message
      });
      
      // protobufjsä¼šå°†snake_caseå­—æ®µåè½¬æ¢ä¸ºcamelCase
      // ä¼˜å…ˆä½¿ç”¨camelCaseï¼Œå¦‚æœæ²¡æœ‰åˆ™ä½¿ç”¨snake_case
      let targetId: number = 0;
      if (message.targetId !== undefined && message.targetId !== null) {
        targetId = Number(message.targetId);
        console.log('âœ… ä½¿ç”¨ message.targetId (camelCase):', targetId);
      } else if (message.target_id !== undefined && message.target_id !== null) {
        targetId = Number(message.target_id);
        console.log('âœ… ä½¿ç”¨ message.target_id (snake_case):', targetId);
      } else {
        console.warn('âš ï¸  è­¦å‘Šï¼štargetId å’Œ target_id éƒ½ä¸å­˜åœ¨ï¼');
      }
      
      let isUser: boolean = false;
      if (message.isUser !== undefined && message.isUser !== null) {
        isUser = Boolean(message.isUser);
        console.log('âœ… ä½¿ç”¨ message.isUser (camelCase):', isUser);
      } else if (message.is_user !== undefined && message.is_user !== null) {
        isUser = Boolean(message.is_user);
        console.log('âœ… ä½¿ç”¨ message.is_user (snake_case):', isUser);
      } else {
        console.warn('âš ï¸  è­¦å‘Šï¼šisUser å’Œ is_user éƒ½ä¸å­˜åœ¨ï¼');
      }
      
      const data: ChatMessageData = {
        target_id: targetId,
        is_user: isUser,
        contents: (message.contents || []).map((c: any) => ({
          content: c.content || []
        }))
      };
      
      console.log('âœ… Protobuf æ¶ˆæ¯è§£ææˆåŠŸ');
      console.log('ğŸ“‹ æœ€ç»ˆè§£æåçš„æ¶ˆæ¯æ•°æ®:', JSON.stringify(data, null, 2));
      console.log('ğŸ“Š è§£æåçš„æ¶ˆæ¯æ•°æ®æ‘˜è¦:', {
        ç›®æ ‡ç”¨æˆ·ID: data.target_id,
        ç›®æ ‡ç”¨æˆ·IDç±»å‹: typeof data.target_id,
        æ˜¯å¦ç”¨æˆ·æ¶ˆæ¯: data.is_user,
        æ˜¯å¦ç”¨æˆ·æ¶ˆæ¯ç±»å‹: typeof data.is_user,
        å†…å®¹å—æ•°é‡: data.contents.length,
        æ¶ˆæ¯æ€»æ•°: data.contents.reduce((sum, c) => sum + (c.content?.length || 0), 0),
        å®Œæ•´å†…å®¹: data.contents
      });
      console.log('==========================================\n');
      
      if (this.onMessageCallback) {
        console.log('ğŸ“¤ è°ƒç”¨ onMessageCallbackï¼Œä¼ é€’æ•°æ®:', JSON.stringify(data, null, 2));
        this.onMessageCallback(data);
      } else {
        console.warn('âš ï¸  è­¦å‘Šï¼šonMessageCallback æœªè®¾ç½®ï¼');
      }
    } catch (error) {
      console.error('âŒ Protobuf æ¶ˆæ¯è§£æå¤±è´¥:', error);
      console.error('åŸå§‹ Buffer æ•°æ®:', Array.from(buffer.slice(0, 50)).map(b => '0x' + b.toString(16).padStart(2, '0')).join(' '));
      console.error('å®Œæ•´ Buffer æ•°æ®:', Array.from(buffer).map(b => b.toString(16).padStart(2, '0')).join(' '));
    }
  }

  async sendMessage(targetUserId: number, message: string): Promise<void> {
    if (!this.ws || this.ws.readyState !== WebSocket.OPEN) {
      console.error('WebSocketæœªè¿æ¥ï¼ŒçŠ¶æ€:', this.ws?.readyState);
      throw new Error('WebSocketæœªè¿æ¥');
    }

    await initProtobuf();
    
    if (!ChatMessage || !Content) {
      throw new Error('Protobufæœªåˆå§‹åŒ–');
    }

    const content = Content.create({ content: [message] });
    // protobufjsåœ¨åˆ›å»ºæ¶ˆæ¯æ—¶ï¼ŒæœŸæœ›ä½¿ç”¨camelCaseå­—æ®µåï¼Œå³ä½¿protoæ–‡ä»¶ä½¿ç”¨snake_case
    // å¦‚æœä½¿ç”¨snake_caseï¼Œå­—æ®µå¯èƒ½ä¼šè¢«é™é»˜ä¸¢å¼ƒ
    const chatMessage = ChatMessage.create({
      targetId: targetUserId,  // camelCase
      isUser: true,            // camelCase
      contents: [content]
    });

    // éªŒè¯æ¶ˆæ¯
    const errMsg = ChatMessage.verify(chatMessage);
    if (errMsg) {
      console.error('æ¶ˆæ¯éªŒè¯å¤±è´¥:', errMsg);
      throw new Error(`æ¶ˆæ¯éªŒè¯å¤±è´¥: ${errMsg}`);
    }

    // ç¡®ä¿is_userå­—æ®µè¢«æ­£ç¡®ç¼–ç ï¼ˆprotobufä¸­falseå€¼å¯èƒ½è¢«çœç•¥ï¼‰
    const buffer = ChatMessage.encode(chatMessage).finish();
    
    // éªŒè¯ç¼–ç åçš„æ¶ˆæ¯ï¼ˆprotobufjsä¼šå°†snake_caseè½¬æ¢ä¸ºcamelCaseï¼‰
    const decoded = ChatMessage.decode(buffer) as any;
    const targetId = decoded.targetId !== undefined ? decoded.targetId : decoded.target_id;
    const isUser = decoded.isUser !== undefined ? decoded.isUser : decoded.is_user;
    
    console.log('å‘é€æ¶ˆæ¯:', {
      userId: this.userId,
      targetUserId,
      message,
      is_user: isUser,
      target_id: targetId,
      bufferLength: buffer.length,
      rawDecoded: decoded
    });
    
    // å¦‚æœis_userä»ç„¶æ˜¯undefinedï¼Œè¯´æ˜ç¼–ç æœ‰é—®é¢˜ï¼ŒæŠ›å‡ºé”™è¯¯
    if (isUser === undefined || isUser === false) {
      console.error('è­¦å‘Š: is_userå­—æ®µæœªæ­£ç¡®ç¼–ç !', {
        originalMessage: chatMessage,
        decodedMessage: decoded,
        buffer: Array.from(buffer),
        isUserValue: isUser
      });
      throw new Error('is_userå­—æ®µæœªæ­£ç¡®ç¼–ç ï¼Œè¯·æ£€æŸ¥protobufé…ç½®');
    }
    
    // å¦‚æœtarget_idä¸æ­£ç¡®ï¼Œä¹ŸæŠ›å‡ºé”™è¯¯
    if (targetId !== targetUserId) {
      console.error('è­¦å‘Š: target_idå­—æ®µæœªæ­£ç¡®ç¼–ç !', {
        expected: targetUserId,
        actual: targetId,
        decodedMessage: decoded
      });
      throw new Error(`target_idå­—æ®µæœªæ­£ç¡®ç¼–ç : æœŸæœ› ${targetUserId}, å®é™… ${targetId}`);
    }
    
    try {
      this.ws.send(buffer);
      console.log('æ¶ˆæ¯å·²å‘é€');
    } catch (error) {
      console.error('å‘é€æ¶ˆæ¯æ—¶å‡ºé”™:', error);
      throw error;
    }
  }

  async sendRoomMessage(roomId: number, message: string): Promise<void> {
    if (!this.ws || this.ws.readyState !== WebSocket.OPEN) {
      console.error('WebSocketæœªè¿æ¥ï¼ŒçŠ¶æ€:', this.ws?.readyState);
      throw new Error('WebSocketæœªè¿æ¥');
    }

    await initProtobuf();
    
    if (!ChatMessage || !Content) {
      throw new Error('Protobufæœªåˆå§‹åŒ–');
    }

    const content = Content.create({ content: [message] });
    const chatMessage = ChatMessage.create({
      targetId: roomId,
      isUser: false,  // æˆ¿é—´æ¶ˆæ¯
      contents: [content]
    });

    // éªŒè¯æ¶ˆæ¯
    const errMsg = ChatMessage.verify(chatMessage);
    if (errMsg) {
      console.error('æ¶ˆæ¯éªŒè¯å¤±è´¥:', errMsg);
      throw new Error(`æ¶ˆæ¯éªŒè¯å¤±è´¥: ${errMsg}`);
    }

    const buffer = ChatMessage.encode(chatMessage).finish();
    
    console.log('å‘é€æˆ¿é—´æ¶ˆæ¯:', {
      userId: this.userId,
      roomId,
      message,
      bufferLength: buffer.length
    });
    
    try {
      this.ws.send(buffer);
      console.log('æˆ¿é—´æ¶ˆæ¯å·²å‘é€');
    } catch (error) {
      console.error('å‘é€æˆ¿é—´æ¶ˆæ¯æ—¶å‡ºé”™:', error);
      throw error;
    }
  }

  onMessage(callback: (data: ChatMessageData) => void): void {
    console.log('ğŸ”§ ========== è®¾ç½® onMessage å›è°ƒ ==========');
    console.log('å›è°ƒå‡½æ•°:', callback);
    console.log('å½“å‰ç”¨æˆ·ID:', this.userId);
    this.onMessageCallback = callback;
    console.log('âœ… onMessageCallback å·²è®¾ç½®');
    console.log('==========================================\n');
  }

  onStatusChange(callback: (connected: boolean) => void): void {
    this.onStatusChangeCallback = callback;
  }

  isConnected(): boolean {
    return this.ws !== null && this.ws.readyState === WebSocket.OPEN;
  }

  getUserId(): number {
    return this.userId;
  }
}
